@@ -11,6 +11,8 @@ Changes in version 0.1.2.2-alpha - 2006-??-??
     - Check for name servers (like Earthlink's) that hijack failing DNS
       requests and replace the 'no such server' answer with a "helpful"
       redirect to an advertising-driven search portal.  [Resolves bug 330.]
+    - When asked to resolve a hostname, don't use non-exit servers.  This
+      allows servers with broken DNS be useful to the network.
 
   o Security Fixes, minor
     - If a client asked for a server by name, and we didn't have a
